# TGBH_CheeseBurger

./: .gitignore  Keystroke.csv  MouseMovement.csv  README.md  TabSwitch.csv  graph_inferences.md  graph_inferences_updated.md  llava_inference.ipynb  plot_heatmap.ipynb
Machine learning/: app.py  main.py  requirements.txt  run1.py
Reinforcement learning/: requirements.txt  run_bot.py
Reports/: comparison_report.md  security_report.md
assets/: EventLog.csv  EventLog.numbers
code-similarity/: .gitignore  Readme.md  pyproject.toml
code-similarity/app/: main.py  main_api.py  test_db.py
code-similarity/app/reports/: comparison_report_20250316_144543.md  comparison_report_20250316_144600.md  comparison_report_20250316_144808.md  comparison_report_20250316_144828.md  comparison_report_20250316_144845.md  comparison_report_20250316_144853.md  comparison_report_20250316_144904.md  comparison_report_20250316_145056.md  comparison_report_20250316_145230.md  comparison_report_20250316_145411.md
code-similarity/prisma/: schema.prisma
code-similarity/reports/: comparison_report_20250316_080836.md  comparison_report_20250316_081203.md  comparison_report_20250316_081321.md
database/: Readme.md
frontend/: delete.bat  delete_and_run.bat  next.config.js  (+3 more)
intelligence/: .gitignore  Readme.md  ffuf_http_192.0.0.2.json  nmap_192.0.0.2.txt  pyproject.toml  security_report.md
intelligence/app/: api.py  main.py  wordlist.txt
intelligence/sqlmap_results/192.0.0.2/: target.txt
intelligence/tasks_logs/: initial_tasks_20250316_054022.json  initial_tasks_20250316_054448.json
(+47 files in other folders)
