[project]
name = "intelligence"
version = "0.1.0"
description = ""
authors = [
    {name = "AagamChhajer",email = "aagamchhajer@gmail.com"}
]
readme = "README.md"
requires-python = "3.11.9"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "langchain (>=0.3.19,<0.4.0)",
    "langchain-core (>=0.3.39,<0.4.0)",
    "langchain-experimental (>=0.3.4,<0.4.0)",
    "langchain-community (>=0.3.18,<0.4.0)",
    "langchain-openai (>=0.3.7,<0.4.0)",
    "openai (>=1.64.0,<2.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "langgraph (>=0.2.74,<0.3.0)",
    "streamlit (>=1.42.2,<2.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "plotly (>=6.0.0,<7.0.0)",
    "watchdog (>=6.0.0,<7.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
 

